package es.ull.patrones.giu;

import javax.swing.*;
import java.awt.*;

public class MyPanel extends JPanel {

    public MyPanel() {
        setBackground(Color.WHITE);
    }
}
