@startuml

title __GIU's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.MyButton {
          + MyButton()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.MyFrame {
          + MyFrame()
          + setButtons()
          + setLabels()
          - setLabelsImage()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.MyLabel {
          + MyLabel()
          + MyLabel()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.MyPanel {
          + MyPanel()
      }
    }
  }
  

  es.ull.patrones.giu.MyButton -up-|> javax.swing.JButton
  es.ull.patrones.giu.MyFrame -up-|> javax.swing.JFrame
  es.ull.patrones.giu.MyFrame o-- es.ull.patrones.giu.MyPanel : panel
  es.ull.patrones.giu.MyLabel -up-|> javax.swing.JLabel
  es.ull.patrones.giu.MyPanel -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
